Plot tweak and trying to fix code block scrolling on mobile

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -66,6 +66,7 @@ code {
  }
  pre {
    overflow-x: auto;
+   width: 100%;
  }
 
 @media (min-width: 48em) {
